Fix spacing issues in on SubmitForm section

--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@ h1 {
   border: 1px solid #bbb;
   box-shadow: 2px rgb(0, 0, 0);
   resize: none;
+  margin-top: 1rem;
 }
 
 button {
@@ -76,6 +77,7 @@ button {
   border-radius: 25px;
   width: 250px;
   height: 40px;
+  margin-bottom: 0.5rem;
   pointer: cursor;
 }
 
